horizontal scroll issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+/* Make sure all containers contain their children properly */
 .App {
   text-align: center;
 }
@@ -40,6 +48,11 @@
 .app {
   font-family: Arial, sans-serif;
   margin-bottom: 5rem;
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .hero-section {
@@ -319,11 +332,7 @@
 }
 
 .slant-bar {
-  width: 100vw;
-  min-width: 100vw;
-  max-width: 100vw;
-  left: 0;
-  right: 0;
+  width: 100%;
   height: 0;
   border-width: 38px;
   border-style: solid;
@@ -336,6 +345,8 @@
   border-top: none;
   border-left: none;
   border-right: none;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 @media (min-width: 1200px) {
